# libiec61850-1

./: .gitignore  CMakeLists.txt  build.sh  monitor.sh  run.sh  sdkconfig  sdkconfig.old
examples/server_example_basic_io/: ION8650.scd  Makefile  server_example_basic_io.c  static_model.c  static_model.h
examples/server_example_basic_io/include/: server_example_basic_io.h
hal/ethernet/esp32/: ethernet_linux.c
hal/filesystem/esp32/: file_provider_linux.c
hal/serial/esp32/: serial_port_linux.c
hal/socket/esp32/: socket_bsd.c
hal/thread/esp32/: thread_linux.c
kcomp/: Kconfig.projbuild
main/: example_main.c
src/iec61850/server/mms_mapping/: reporting.c
